feat: experimental support for QQ MiniProgram

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev:mp-jd": "uni -p mp-jd",
     "dev:mp-kuaishou": "uni -p mp-kuaishou",
     "dev:mp-lark": "uni -p mp-lark",
-    "dev:mp-qq": "uni -p mp-qq",
+    "dev:mp-qq": "cross-env UNI_OUTPUT_DIR=dist/qq uni -p mp-qq",
     "dev:mp-toutiao": "uni -p mp-toutiao",
     "dev:mp-weixin": "uni -p mp-weixin",
     "dev:mp-xhs": "uni -p mp-xhs",
