--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,8 +1,19 @@
 {
   "name": "@dnt/core",
+  "type": "module",
+  "main": "src/index.js",
+  "exports": {
+    ".": "./src/index.ts"
+  },
   "dependencies": {
+    "linkifyjs": "^4.1.3",
+    "magic-regexp": "^0.8.0",
+    "querystringify": "^2.2.0",
     "radix3": "^1.1.2",
     "url-parse": "^1.5.10",
     "valibot": "^0.30.0"
+  },
+  "devDependencies": {
+    "@types/querystringify": "^2.0.2"
   }
 }
