--- a/.github/workflows/build-web.yaml
+++ b/.github/workflows/build-web.yaml
@@ -12,6 +12,7 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Login to GitHub Container Registry
