--- a/.github/workflows/build-web.yaml
+++ b/.github/workflows/build-web.yaml
@@ -6,6 +6,7 @@ on:
       - 'main'
     paths:
       - 'packages/web/**'
+      - 'Dockerfile'
       - '.github/workflows/build-web.yaml'
 
 jobs:
@@ -30,7 +31,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          context: packages/web
+          target: web
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
