--- a/packages/uni-dnt/package.json
+++ b/packages/uni-dnt/package.json
@@ -56,11 +56,9 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-alpha-4010320240419003",
     "@dcloudio/uni-mp-xhs": "3.0.0-alpha-4010320240419003",
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-4010320240419003",
-    "url": "^0.11.3",
-    "url-parse": "^1.5.10",
+    "@dnt/core": "workspace:*",
     "vue": "^3.4.23",
-    "vue-i18n": "^9.13.1",
-    "whatwg-url": "^14.0.0"
+    "vue-i18n": "^9.13.1"
   },
   "devDependencies": {
     "@dcloudio/types": "^3.4.8",
@@ -70,6 +68,7 @@
     "@dcloudio/vite-plugin-uni": "3.0.0-alpha-4010320240419003",
     "@egoist/tailwindcss-icons": "^1.7.4",
     "@iconify-json/lucide": "^1.1.183",
+    "@iconify-json/simple-icons": "^1.1.102",
     "@types/url-parse": "^1.4.11",
     "@types/whatwg-url": "^11.0.4",
     "@vue/runtime-core": "^3.4.23",
