--- a/.github/workflows/build-web.yaml
+++ b/.github/workflows/build-web.yaml
@@ -38,6 +38,7 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
       - name: Build and push
         uses: docker/build-push-action@v5
+        id: push
         with:
           push: true
           target: web
