--- a/.github/workflows/build-web.yaml
+++ b/.github/workflows/build-web.yaml
@@ -18,6 +18,11 @@ env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 
+permissions:
+  contents: read
+  packages: write
+  id-token: write
+
 jobs:
   docker:
     runs-on: ubuntu-latest
