--- a/.github/workflows/build-web.yaml
+++ b/.github/workflows/build-web.yaml
@@ -19,7 +19,7 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 permissions:
-  contents: read
+  contents: write
   packages: write
   id-token: write
 
