--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,6 +6,9 @@
     ".": "./src/index.ts"
   },
   "dependencies": {
+    "cheerio": "1.0.0-rc.12",
+    "dayjs": "^1.11.11",
+    "esprima": "^4.0.1",
     "linkifyjs": "^4.1.3",
     "magic-regexp": "^0.8.0",
     "querystringify": "^2.2.0",
@@ -13,6 +16,7 @@
     "valibot": "^0.30.0"
   },
   "devDependencies": {
+    "@types/esprima": "^4.0.6",
     "@types/querystringify": "^2.0.2"
   }
 }
