feat(wx): remove postinstall

--- a/packages/uni-dnt/package.json
+++ b/packages/uni-dnt/package.json
@@ -38,8 +38,7 @@
     "build:quickapp-webview": "uni build -p quickapp-webview",
     "build:quickapp-webview-huawei": "uni build -p quickapp-webview-huawei",
     "build:quickapp-webview-union": "uni build -p quickapp-webview-union",
-    "type-check": "vue-tsc --noEmit",
-    "postinstall": "weapp-tw patch"
+    "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
     "@dcloudio/uni-app": "3.0.0-alpha-4010320240419003",
