--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@dnt/core": "workspace:*",
+    "@nuxtjs/robots": "^3.0.0",
     "@trpc/client": "^10.45.2",
     "@trpc/server": "^10.45.2",
     "nuxt": "^3.11.2",
