--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -14,11 +14,13 @@
     "@nuxtjs/robots": "^3.0.0",
     "@trpc/client": "^10.45.2",
     "@trpc/server": "^10.45.2",
+    "@vueuse/core": "^10.10.0",
     "nuxt": "^3.11.2",
     "open-graph-scraper": "^6.5.1",
     "trpc-nuxt": "^0.10.21",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2",
+    "vue-sonner": "^1.1.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
