--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -15,9 +15,18 @@
     "@trpc/client": "^10.45.2",
     "@trpc/server": "^10.45.2",
     "@vueuse/core": "^10.10.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.390.0",
     "nuxt": "^3.11.2",
     "open-graph-scraper": "^6.5.1",
+    "radix-vue": "^1.8.3",
+    "semver": "^7.6.2",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "trpc-nuxt": "^0.10.21",
+    "ua-parser-js": "^1.0.38",
+    "vaul-vue": "^0.1.2",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2",
     "vue-sonner": "^1.1.2",
@@ -28,6 +37,8 @@
     "@iconify-json/lucide": "^1.1.183",
     "@iconify-json/simple-icons": "^1.1.102",
     "@nuxtjs/tailwindcss": "^6.12.0",
+    "@types/semver": "^7.5.8",
+    "@types/ua-parser-js": "^0.7.39",
     "tailwindcss-safe-area": "^0.5.1"
   }
 }
