--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -41,6 +41,7 @@
     "@iconify-json/material-symbols-light": "^1.1.25",
     "@iconify-json/quill": "^1.1.10",
     "@iconify-json/simple-icons": "^1.1.102",
+    "@iconify-json/svg-spinners": "^1.1.3",
     "@nuxtjs/device": "^3.1.1",
     "@nuxtjs/tailwindcss": "^6.12.0",
     "@types/semver": "^7.5.8",
