--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -15,9 +15,11 @@
     "@trpc/client": "^10.45.2",
     "@trpc/server": "^10.45.2",
     "@vueuse/core": "^10.10.0",
+    "better-sqlite3": "^11.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "domutils": "^3.1.0",
+    "drizzle-orm": "^0.33.0",
     "htmlparser2": "^9.1.0",
     "lucide-vue-next": "^0.390.0",
     "nuxt": "^3.11.2",
@@ -44,8 +46,10 @@
     "@iconify-json/svg-spinners": "^1.1.3",
     "@nuxtjs/device": "^3.1.1",
     "@nuxtjs/tailwindcss": "^6.12.0",
+    "@types/better-sqlite3": "^7.6.11",
     "@types/semver": "^7.5.8",
     "@types/ua-parser-js": "^0.7.39",
+    "drizzle-kit": "^0.24.0",
     "tailwindcss-safe-area": "^0.5.1"
   }
 }
