Update Docker base image tag to latest
---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/robinWongM/wechat-dnt?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/packages/web/Dockerfile
+++ b/packages/web/Dockerfile
@@ -5,7 +5,7 @@ RUN corepack enable pnpm && pnpm install
 COPY . /app
 RUN cd packages/web && pnpm run build
 
-FROM cgr.dev/chainguard/node-lts:latest as prod
+FROM cgr.dev/chainguard/node:latest as prod
 WORKDIR /app
 COPY --from=build /app/packages/web/.output/server /app/.output/server
 EXPOSE 3000/tcp
